# gedcom_parser

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README  convert.py  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  start_develop.sh
.github/workflows/: style-enforcement.yml
arguments/: __init__.py  args.py
gedcom_parser/: __init__.py
gedcom_parser/parsers/: __init__.py  entry.py
gedcom_static/: from_lfb_file.ged  genealogy_all_20210626.ged
home/: index.html
parse/: convert.py  parse.py
parsers/: entry.py  gedcom_file.py  line.py  parse.py
reference/SUMMARY/: index.html
reference/gedcom_parser/: index.html
reference/gedcom_parser/arguments/: index.html
reference/gedcom_parser/arguments/args/: index.html
reference/gedcom_parser/parsers/: index.html
reference/gedcom_parser/parsers/entry/: index.html
reference/gedcom_parser/parsers/gedcom_file/: index.html
reference/parsers/: index.html
reference/parsers/entry/: index.html
reference/parsers/gedcom_file/: index.html
search/: search_index.json
validate_args/: validate.py
