[tool.black]
line-length = 100
target-version = ['py38']

[tool.poetry]
name = "gedcom-parser"
version = "0.1.0"
description = "A package for working with geneaology gedcom file format"
authors = ["jordankbartos"]
license = "BSD"
readme = "README.md"
packages = [{include = "gedcom_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4"
envparse = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.13"
pytest = "^7.1.3"
mkdocs = "^1.3.1"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.4.1"
mkdocs-material = "^8.4.2"
mkdocs-section-index = "^0.3.4"
mkdocstrings = "^0.19.0"
black = "^22.8.0"
autoflake = "^1.5.3"
mkdocstrings-python = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
